--- a/webapp/style.css
+++ b/webapp/style.css
@@ -1,4 +1,30 @@
-table, td {
+table,
+td {
     border: 1px solid;
-    width: 50%;
-  }
+    /* width: 50%;
+    padding: 5px; */
+    text-align: left;
+}
+
+
+.arrow-up{
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 10px solid black;
+    display: inline-block;
+}
+
+.arrow-down{
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 10px solid black;
+    display: inline-block;
+}
+
+div{
+    flex: auto;
+}
